--- a/.github/workflows/conformance-datapath.yaml
+++ b/.github/workflows/conformance-datapath.yaml
@@ -139,6 +139,7 @@ jobs:
             tunnel: 'vxlan'
             encryption: 'wireguard'
             lb-mode: 'snat'
+            endpoint-routes: 'true'
 
           - kernel: '5.15-main'
             kube-proxy: 'iptables'
@@ -146,6 +147,7 @@ jobs:
             tunnel: 'disabled'
             encryption: 'wireguard'
             lb-mode: 'dsr'
+            endpoint-routes: 'true'
 
           - kernel: '6.0-main'
             kube-proxy: 'none'
@@ -201,7 +203,11 @@ jobs:
           if [ "${{ matrix.lb-mode }}" != "" ]; then
             LB_MODE="--helm-set-string=loadBalancer.mode=${{ matrix.lb-mode }}"
           fi
-          CONFIG="${CILIUM_INSTALL_DEFAULTS} ${TUNNEL} ${LB_MODE}"
+          ENDPOINT_ROUTES=""
+          if [ "${{ matrix.endpoint-routes }}" == "true" ]; then
+            ENDPOINT_ROUTES="--helm-set-string=endpointRoutes.enabled=true"
+          fi
+          CONFIG="${CILIUM_INSTALL_DEFAULTS} ${TUNNEL} ${LB_MODE} ${ENDPOINT_ROUTES}"
 
           echo "cilium_install_defaults=${CONFIG}" >> $GITHUB_OUTPUT
 
